--- a/chrome/manifest.prod.json
+++ b/chrome/manifest.prod.json
@@ -21,15 +21,19 @@
     "page": "background.html",
     "persistent": false
   },
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content/index.js"]
-  }],
   "permissions": [
     "tabs",
     "storage",
     "cookies",
     "<all_urls>"
   ],
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+K",
+        "mac": "Command+Shift+K"
+      }
+    }
+  },
   "content_security_policy": "default-src 'self'; font-src https://fonts.gstatic.com; script-src 'self' 'unsafe-eval'; connect-src 'self'; style-src * 'unsafe-inline' 'self' blob:; img-src 'self' data: https: http:;"
 }
